--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 <packaging>jar</packaging>
 <version>1.0</version>
 
+    <description>A battleship game.</description>
     <developers>
         <developer>
             <id>Dpara</id>
@@ -257,7 +258,7 @@
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-report-plugin</artifactId>
-            <version>3.0.0-M4</version>
+            <version>3.0.0-M3</version>
         </plugin>
         <plugin>
             <groupId>org.jacoco</groupId>
